@@ -6,6 +6,7 @@
 - Added support of boolean parameters by the configuration parser.
 - Added resource::PrefixLoader resource loader implementation.
 - Added supplementary methods to the configuration parameters.
+- Refactored the lsp::Color class: less inline code, more flexible methods.
 
 === 0.5.9 ===
 * Several fixes for resource compressor.
